--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body class="Title">
 <h1>Index page of files&nbsp;</h1>
-<a href="JetBrainsActivation/index.html" title="JetBrains Activation" target="_blank">JetBrains Activation</a>
+<p><a href="JetBrainsActivation/index.html" title="JetBrains Activation" target="_blank">JetBrains Activation</a> </p>
+<p><a href="./Novels/index.html">Novels</a></p>
+<p>Better.Real-ESRGAN&nbsp;</p>
 </body>
 
 </html>
